# resume_builder

./: alembic.ini  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 1f08a42832d4_add_optional_applied_field.py  80de2652333e_reformatted_schema_model.py  8b1bb02f8231_change_compensation_string.py  9077d691c2e5_add_job_table.py  9edcd2cc8586_add_optional_location_to_db.py  b08865e9d3e9_add_match_label.py  bd3fbc5573f4_add_match_label.py  d858d9b3f1d0_add_link.py  e90024344892_add_company_name.py
app/: db_handler.py  extract_pdf_to_database.py  langchain_handler.py
app/jobscrapers/: linkedinscraper.py
db/: db.sqlite  models.py  schemas.py
files/: cover_letter.txt  documents.json  job_description.txt  profile_summary.txt
