[project]
name = "resume-builder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langchain-postgres>=0.0.14",
    "langgraph>=0.3.25",
    "openai>=1.71.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.25.5",
    "sentence-transformers>=4.1.0",
    "sqlmodel>=0.0.24",
]
